# metaKEGG

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
conda_env/: environment.yml
examples/: metadata_for_quantification.tsv  methylation.csv  methylation_for_quantification.csv  miRNA.tsv  miRNA_for_quantification.tsv  multiple_inputs_1.xlsx  multiple_inputs_2.xlsx  pipeline_timing.eps  single_input_bulk.xlsx  single_input_genes.xlsx  single_input_transcripts.xlsx  timing.ipynb  tutorial.ipynb
examples/draw_KEGG_2024-07-01_3_inputs/: genes_per_cell.xlsx  ko04932_Non-alcoholic_fatty_liver_disease.eps  pathways_per_gene_input1.xlsx  pathways_per_gene_input2.xlsx  pathways_per_gene_input3.xlsx
examples/draw_KEGG_2024-07-01_bulk/: genes_per_cell.xlsx  mmu04932_Non-alcoholic_fatty_liver_disease.eps  mmu04932_Non-alcoholic_fatty_liver_disease_colorbar.eps  pathways_per_gene.xlsx
examples/draw_KEGG_2024-07-01_genes/: genes_per_cell.xlsx  mmu04932_Non-alcoholic_fatty_liver_disease.eps  mmu04932_Non-alcoholic_fatty_liver_disease_colorbar.eps  pathways_per_gene.xlsx
examples/draw_KEGG_2024-07-01_methylation/: genes_per_cell.xlsx  mmu04932_Non-alcoholic_fatty_liver_disease.eps  pathways_per_gene.xlsx
examples/draw_KEGG_2024-07-01_methylation_and_miRNA/: genes_per_cell.xlsx  mmu04932_Non-alcoholic_fatty_liver_disease.eps  pathways_per_gene.xlsx
examples/draw_KEGG_2024-07-01_methylation_quantification/: cgs_per_gene.xlsx  genes_per_cell.xlsx  mmu04932_Non-alcoholic_fatty_liver_disease.eps  (+4 more)
tests/: test_config.py  test_pipeline.py  test_pipeline_async.py
(+321 files in other folders)
