[project]
name = "metaKEGG"
version = "1.0.0"

authors = [
  { name="Michail Lazaratos", email="Michail.Lazaratos@dife.de" },
]
maintainers = [
  { name="Michail Lazaratos", email="Michail.Lazaratos@dife.de" },
]
description = "A python package to map enrichment analysis on KEGG pathways."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'matplotlib <= 3.6.2',
  'numpy <= 1.26.0',
  'openpyxl <= 3.0.10',
  'pyopenssl <= 24.0.0',
  'pandas <= 1.5.2',
  'pip',
  'setuptools <= 65.6.3',
  'biopython <= 1.81',
  'pypdf2 <= 3.0.1',
  'pytest <= 8.0.1',
  'pytest-asyncio <= 0.20.0',
  'reportlab <= 3.6.12',
  'requests <= 2.28.2',
  'xlsxwriter <= 3.1.0'
]
license = { "text" = "AGPL-3.0" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=65.6"]
build-backend = "setuptools.build_meta"

[project.scripts]
metaKEGG = "metaKEGG.cli:main"

[project.urls]
Repository = "https://github.com/dife-bioinformatics/metaKEGG"